--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.1.6
 homepage: https://github.com/ghuyfel/flutter_azure_tts
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0"
 
 dependencies:
   http: ^1.1.0
